--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 <html>
 <head>
 	<title>V bank</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta charset = "utf-8" />
      <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body style="background-color: cyan">
-<h1 style="text-align: center; color: maroon">Hello You Are Welcome to</h1><br>
+	<section>
+    <h3 style="text-align: center; color: #FFD57E">Hello You Are Welcome to</h3><br>
 
-<h1 style="text-align: center; color: #BF8FF3">Izu's V-BANK</h1><hr style="width: 70%"><br>
-
-<br><h2 style="text-align: center; color: maroon">Please kindly click a button below to select a transaction</h2>
-<h3 style="text-align: center; color: white; color: #BF8FF3" id="bal">You are yet to pay in money</h3>
+    <h1 style="text-align: center; color: #FFD57E">Izu's V-BANK</h1><br>
+	</section>
+	<hr style="width: 97%; border-color: #835858; height: 5px; background-color: #EBD4D4">
+<br><br><section>
+<br><h2 style="text-align: center; color: #FFD57E">Please kindly click a button below to select a transaction</h2>
+<h3 style="text-align: center; color: white; color: #FFD57E" id="bal">You are yet to pay in money</h3>
 <br><div style="text-align: center; ">
-<button style="margin-right: 30px; background-color: #BF8FF3; height: 50px; cursor: pointer; border-radius: 10px" onclick="Addfunction()">Pay in Money</button>
-<button style=" background-color: #BF8FF3; height: 50px; cursor: pointer; border-radius: 10px" onclick="withdrawCash()">Withdraw Money</button>
-<button style="margin-left: 30px; background-color: #BF8FF3; height: 50px; cursor: pointer; border-radius: 10px" onclick="accBal()">Check account balance</button>
+<button style="margin-right: 30px; background-color: #AC4B1C; height: 30px; cursor: pointer; border-radius: 10px" onclick="Addfunction()">Pay in Money</button>
+<button style=" background-color: #AC4B1C; height: 30px; cursor: pointer; border-radius: 10px" onclick="withdrawCash()">Withdraw Money</button>
+<button style="margin-left: 30px; background-color: #AC4B1C; height: 30px; cursor: pointer; border-radius: 10px" onclick="accBal()">Check account balance</button>
 </div>
+</section>
+
 
 
 
